syntax="proto3";

package lavanet.lava.downtime.v1;

option go_package = "github.com/lavanet/lava/x/downtime/v1";

import "google/protobuf/duration.proto";
import "gogoproto/gogo.proto";

// Params defines the parameters of the downtime module.
message Params {
  // downtime_duration defines the minimum time elapsed between blocks
  // that we consider the chain to be down.
  google.protobuf.Duration downtime_duration = 1 [(gogoproto.nullable) = false, (gogoproto.stdduration) = true];
}